border between sections added, page title margin fixed for viewport width >= 520, unvisible scrollbar added to 'title rotation' block

--- a/src/scss/page-title.scss
+++ b/src/scss/page-title.scss
@@ -5,7 +5,7 @@
   color: $main-text-color;
   margin: $small-indent * 2 $base-indent;
 
-  @media (min-width: $md-width) {
+  @media (min-width: $sm-width + 2*$base-indent) {
     margin-left: 0;
   }
 
